Ajuste na barra fixa de baixo do layout

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
     <!-- CORPO DO APP -->
     <main>
-        <!-- BARRA FIXA DO TOPO -->
-        <header>
-            <h1>DrivenEats</h1>
-            <h2>Sua comida em 6 minutos</h2>
-        </header>
         <!-- CONTEUDO -->
-        <div>
+        <div class="conteudo">
+            <!-- BARRA FIXA DO TOPO -->
+            <header>
+                <h1>DrivenEats</h1>
+                <h2>Sua comida em 6 minutos</h2>
+            </header>
             <!-- MENU 1 - PRATO PRINCIPAL -->
             <div class="menu menu-1">
                 <h1>Primeiro, seu prato</h1>
@@ -103,13 +103,15 @@
                 </div>
             </div>
             <!-- BARRA FIXA DE BAIXO -->
+            <footer>
+                <div class="barra-baixo-botao">
+                    <h2>Selecione os 3 itens para fechar o pedido</h2>
+                </div>
+            </footer>
         </div>
-        <footer>
-            <div class="barra-baixo-botao">
-                <h2>Selecione os 3 itens para fechar o pedido</h2>
-            </div>
-        </footer>
     </main>
+    <!-- JAVA -->
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
