Ajustes finos na rolagem horizontal

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <h2 class="menu-opcao-preco">R$ 15,00</h2>
                     </div>
 
-                    <div class="menu-opcao">
+                    <div class="menu-opcao menu-opcao-ultimo">
                         <img src="assets/sushi.jpg" alt="sushi">
                         <h2 class="menu-opcao-prato">Barca de Sushi</h2>
                         <h2 class="menu-opcao-descricao">20 peças de sushi de kani</h2>
@@ -68,7 +68,7 @@
                         <h2 class="menu-opcao-preco">R$ 7,00</h2>
                     </div>
 
-                    <div class="menu-opcao">
+                    <div class="menu-opcao menu-opcao-ultimo">
                         <img src="assets/coco.jpg" alt="coco">
                         <h2 class="menu-opcao-prato">Água de Coco</h2>
                         <h2 class="menu-opcao-descricao">Água de coco fresquinha</h2>
@@ -94,7 +94,7 @@
                         <h2 class="menu-opcao-preco">R$ 12,00</h2>
                     </div>
 
-                    <div class="menu-opcao">
+                    <div class="menu-opcao menu-opcao-ultimo">
                         <img src="assets/pudim.jpg" alt="pudim">
                         <h2 class="menu-opcao-prato">Pudim</h2>
                         <h2 class="menu-opcao-descricao">Pudim de leite com calda de chocolate</h2>
