Adicionado identificadores para correção automática exceto do java

--- a/index.html
+++ b/index.html
@@ -25,38 +25,38 @@
                 <h2>Sua comida em 6 minutos</h2>
             </header>
             <!-- MENU 1 - PRATO PRINCIPAL -->
-            <div class="menu menu-1">
+            <div class="menu menu-1" data-identifier="dishes">
                 <h1>Primeiro, seu prato</h1>
                 <div class="menu-opcoes">
-                    <div class="menu-opcao">
+                    <div class="menu-opcao" data-identifier="food-option">
                         <img src="assets/pizza.jpg" alt="pizza">
-                        <h2 class="menu-opcao-prato">Pizza de Capituri</h2>
+                        <h2 class="menu-opcao-prato" data-identifier="food-title">Pizza de Capituri</h2>
                         <h2 class="menu-opcao-descricao">Massa de pizza, frango e capituri</h2>
-                        <h2 class="menu-opcao-preco">R$ 20,00</h2>
+                        <h2 class="menu-opcao-preco" data-identifier="food-price">R$ 20,00</h2>
                     </div>
 
-                    <div class="menu-opcao">
+                    <div class="menu-opcao" data-identifier="food-option">
                         <img src="assets/lasanha.jpg" alt="lasanha">
-                        <h2 class="menu-opcao-prato">Lasanha de Frango</h2>
+                        <h2 class="menu-opcao-prato" data-identifier="food-title">Lasanha de Frango</h2>
                         <h2 class="menu-opcao-descricao">Macarrão, frango e molho</h2>
-                        <h2 class="menu-opcao-preco">R$ 15,00</h2>
+                        <h2 class="menu-opcao-preco" data-identifier="food-price">R$ 15,00</h2>
                     </div>
 
-                    <div class="menu-opcao menu-opcao-ultimo">
+                    <div class="menu-opcao menu-opcao-ultimo" data-identifier="food-option">
                         <img src="assets/sushi.jpg" alt="sushi">
-                        <h2 class="menu-opcao-prato">Barca de Sushi</h2>
+                        <h2 class="menu-opcao-prato" data-identifier="food-title">Barca de Sushi</h2>
                         <h2 class="menu-opcao-descricao">20 peças de sushi de kani</h2>
-                        <h2 class="menu-opcao-preco">R$ 25,00</h2>
+                        <h2 class="menu-opcao-preco" data-identifier="food-price">R$ 25,00</h2>
                     </div>
                 </div>
             </div>
             <!-- MENU 2 - BEBIDA -->
-            <div class="menu">
+            <div class="menu" data-identifier="drinks">
                 <h1>Agora, sua bebida</h1>
                 <div class="menu-opcoes">
                     <div class="menu-opcao">
                         <img src="assets/refrigerante.jpg" alt="refrigerante">
-                        <h2 class="menu-opcao-prato">Lata de refrigerante</h2>
+                        <h2 class="menu-opcao-prato" >Lata de refrigerante</h2>
                         <h2 class="menu-opcao-descricao">Lata de 350ml, qualquer marca</h2>
                         <h2 class="menu-opcao-preco">R$ 6,00</h2>
                     </div>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <!-- MENU 3 - SOBREMESA -->
-            <div class="menu menu-3">
+            <div class="menu menu-3" data-identifier="desserts">
                 <h1>Por fim, sua sobremesa</h1>
                 <div class="menu-opcoes">
                     <div class="menu-opcao">
