--- a/index.html
+++ b/index.html
@@ -28,18 +28,22 @@
             <div class="menu menu-1" data-identifier="dishes">
                 <h1>Primeiro, seu prato</h1>
                 <div class="menu-opcoes">
-                    <div class="menu-opcao" data-identifier="food-option">
-                        <img src="assets/pizza.jpg" alt="pizza">
-                        <h2 class="menu-opcao-prato" data-identifier="food-title">Pizza de Capituri</h2>
-                        <h2 class="menu-opcao-descricao">Massa de pizza, frango e capituri</h2>
-                        <h2 class="menu-opcao-preco" data-identifier="food-price">R$ 20,00</h2>
-                    </div>
+                    <!-- <div class="menu-opcao-checado"></div> -->
+                        <div class="menu-opcao" data-identifier="food-option">
+                            <img src="assets/pizza.jpg" alt="pizza">
+                            <h2 class="menu-opcao-prato" data-identifier="food-title">Pizza de Capituri</h2>
+                            <h2 class="menu-opcao-descricao">Massa de pizza, frango e capituri</h2>
+                            <h2 class="menu-opcao-preco" data-identifier="food-price">R$ 20,00</h2>
+                            <ion-icon name="checkmark-circle"></ion-icon>
+                            <!-- <img class="sinal-checado-verde" src="assets/sinal-checado-verde.png" alt="sinal-checado-verde"> -->
+                        </div>
 
                     <div class="menu-opcao" data-identifier="food-option">
                         <img src="assets/lasanha.jpg" alt="lasanha">
                         <h2 class="menu-opcao-prato" data-identifier="food-title">Lasanha de Frango</h2>
                         <h2 class="menu-opcao-descricao">Macarrão, frango e molho</h2>
                         <h2 class="menu-opcao-preco" data-identifier="food-price">R$ 15,00</h2>
+                        <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
 
                     <div class="menu-opcao menu-opcao-ultimo" data-identifier="food-option">
@@ -47,6 +51,7 @@
                         <h2 class="menu-opcao-prato" data-identifier="food-title">Barca de Sushi</h2>
                         <h2 class="menu-opcao-descricao">20 peças de sushi de kani</h2>
                         <h2 class="menu-opcao-preco" data-identifier="food-price">R$ 25,00</h2>
+                        <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
                 </div>
             </div>
@@ -56,9 +61,10 @@
                 <div class="menu-opcoes">
                     <div class="menu-opcao">
                         <img src="assets/refrigerante.jpg" alt="refrigerante">
-                        <h2 class="menu-opcao-prato" >Lata de refrigerante</h2>
+                        <h2 class="menu-opcao-prato">Lata de refrigerante</h2>
                         <h2 class="menu-opcao-descricao">Lata de 350ml, qualquer marca</h2>
                         <h2 class="menu-opcao-preco">R$ 6,00</h2>
+                        <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
 
                     <div class="menu-opcao">
@@ -66,6 +72,7 @@
                         <h2 class="menu-opcao-prato">Suquinho de laranja</h2>
                         <h2 class="menu-opcao-descricao">Um DELICIOSO suco de laranja</h2>
                         <h2 class="menu-opcao-preco">R$ 7,00</h2>
+                        <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
 
                     <div class="menu-opcao menu-opcao-ultimo">
@@ -73,6 +80,7 @@
                         <h2 class="menu-opcao-prato">Água de Coco</h2>
                         <h2 class="menu-opcao-descricao">Água de coco fresquinha</h2>
                         <h2 class="menu-opcao-preco">R$ 8,00</h2>
+                        <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
                 </div>
             </div>
@@ -85,6 +93,7 @@
                         <h2 class="menu-opcao-prato">Bolo de Cenoura</h2>
                         <h2 class="menu-opcao-descricao">Bolo de cenoura com cobertura de chocolate</h2>
                         <h2 class="menu-opcao-preco">R$ 11,00</h2>
+                        <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
 
                     <div class="menu-opcao">
@@ -92,6 +101,7 @@
                         <h2 class="menu-opcao-prato">Sorvete</h2>
                         <h2 class="menu-opcao-descricao">500mg de sorvete, qualquer sabor</h2>
                         <h2 class="menu-opcao-preco">R$ 12,00</h2>
+                        <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
 
                     <div class="menu-opcao menu-opcao-ultimo">
@@ -99,6 +109,7 @@
                         <h2 class="menu-opcao-prato">Pudim</h2>
                         <h2 class="menu-opcao-descricao">Pudim de leite com calda de chocolate</h2>
                         <h2 class="menu-opcao-preco">R$ 13,00</h2>
+                        <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
                 </div>
             </div>
@@ -111,6 +122,7 @@
         </div>
     </main>
     <!-- JAVA -->
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 
