Adicionado botão verde da barra fixa de baixo

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 <h1>Primeiro, seu prato</h1>
                 <div class="menu-opcoes">
                     <!-- <div class="menu-opcao-checado"></div> -->
-                        <div class="menu-opcao" data-identifier="food-option">
-                            <img src="assets/pizza.jpg" alt="pizza">
-                            <h2 class="menu-opcao-prato" data-identifier="food-title">Pizza de Capituri</h2>
-                            <h2 class="menu-opcao-descricao">Massa de pizza, frango e capituri</h2>
-                            <h2 class="menu-opcao-preco" data-identifier="food-price">R$ 20,00</h2>
-                            <ion-icon name="checkmark-circle"></ion-icon>
-                            <!-- <img class="sinal-checado-verde" src="assets/sinal-checado-verde.png" alt="sinal-checado-verde"> -->
-                        </div>
+                    <div class="menu-opcao" data-identifier="food-option">
+                        <img src="assets/pizza.jpg" alt="pizza">
+                        <h2 class="menu-opcao-prato" data-identifier="food-title">Pizza de Capituri</h2>
+                        <h2 class="menu-opcao-descricao">Massa de pizza, frango e capituri</h2>
+                        <h2 class="menu-opcao-preco" data-identifier="food-price">R$ 20,00</h2>
+                        <ion-icon name="checkmark-circle"></ion-icon>
+                        <!-- <img class="sinal-checado-verde" src="assets/sinal-checado-verde.png" alt="sinal-checado-verde"> -->
+                    </div>
 
                     <div class="menu-opcao" data-identifier="food-option">
                         <img src="assets/lasanha.jpg" alt="lasanha">
@@ -114,10 +114,19 @@
                 </div>
             </div>
             <!-- BARRA FIXA DE BAIXO -->
-            <footer>
+            <footer class="barra-fixa-baixo-cinza">
                 <div class="barra-baixo-botao">
                     <h2>Selecione os 3 itens para fechar o pedido</h2>
                 </div>
+            </footer>
+
+            <footer class="barra-fixa-baixo-verde">
+                <a href="https://wa.me/5593991970827?text=Eu%20tenho%20interesse%20no%20seu%20carro%20à%20venda"
+                    target="_blank">
+                    <div class="barra-baixo-botao">
+                        <h2>Fechar pedido</h2>
+                    </div>
+                </a>
             </footer>
         </div>
     </main>
