Iniciado onclick com Java Script

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 <h1>Primeiro, seu prato</h1>
                 <div class="menu-opcoes">
                     <!-- <div class="menu-opcao-checado"></div> -->
-                    <div class="menu-opcao" data-identifier="food-option">
+                    <div class="menu-opcao" id="pizza" onclick="selecionar()" data-identifier="food-option">
                         <img src="assets/pizza.jpg" alt="pizza">
                         <h2 class="menu-opcao-prato" data-identifier="food-title">Pizza de Capituri</h2>
                         <h2 class="menu-opcao-descricao">Massa de pizza, frango e capituri</h2>
                         <h2 class="menu-opcao-preco" data-identifier="food-price">R$ 20,00</h2>
-                        <ion-icon name="checkmark-circle"></ion-icon>
+                        <ion-icon name="checkmark-circle" id="pizza-sinal-verde"></ion-icon>
                         <!-- <img class="sinal-checado-verde" src="assets/sinal-checado-verde.png" alt="sinal-checado-verde"> -->
                     </div>
 
