Implementada a liberação do botão verde

--- a/index.html
+++ b/index.html
@@ -115,22 +115,17 @@
             </div>
             <!-- BARRA FIXA DE BAIXO -->
             <footer class="barra-fixa-baixo">
-                <div class="barra-baixo-botao">
+                <div class="barra-baixo-botao barra-baixo-botao-verde" onclick="fecharPedido()">
                     <h2>Selecione os 3 itens para fechar o pedido</h2>
                 </div>
             </footer>
-
-            <!-- 
+<!-- 
             <footer class="barra-fixa-baixo-verde">
-                <a href="https://wa.me/5593991970827?text=Eu%20tenho%20interesse%20no%20seu%20carro%20à%20venda"
-                    target="_blank">
-                <div class="barra-baixo-botao">
+                <div class="barra-baixo-botao" onclick="">
                     <h2>Fechar pedido</h2>
                 </div>
-                </a>
             </footer>
-            -->
-
+ -->
         </div>
     </main>
     <!-- JAVA -->
